--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <br>
-    <h3>Período de exibição: {{ dataInicio }} - {{ dataFinal }}</h3>
+    <h3>Período de exibição: {{ dataInicioString }} - {{ dataFinalString }}</h3>
     <br>
     <button id='botao-back' mat-raised-button style='width: 12.5%; padding-left: 20px;' color="primary" routerLink=''> Voltar </button>
 </div>
