--- a/src/app/box-init/box-init.component.css
+++ b/src/app/box-init/box-init.component.css
@@ -47,3 +47,22 @@
     padding-right: 45px;
     padding-bottom: 20px;
 }
+
+@media (max-width: 600px) {
+    .text-retangulo-central{
+        text-align: start;
+        padding: 12px;
+        padding-left: 0%;
+    
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 34px;
+        line-height: 42px;
+        top: 0;
+        width: 100%;
+    
+        
+        border: 1px solid #A49090;
+    }
+}
